--- a/property-details.ejs
+++ b/property-details.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/assets/css/owl.css">
     <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="/assets/css/order-page.css">
 <!--
 
 TemplateMo 591 villa agency
@@ -99,7 +100,7 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-12">
         <!--<span class="breadcrumb"><a href="#">Home</a>  /  Single Property</span> -->
-          <h3><%= name %></h3>
+          <h3><%= product_name %></h3>
         </div>
       </div>
     </div>
@@ -119,7 +120,11 @@ https://templatemo.com/tm-591-villa-agency
             <p>Get <strong>the best villa agency</strong> HTML CSS Bootstrap Template for your company website. TemplateMo provides you the <a href="https://www.google.com/search?q=best+free+css+templates" target="_blank">best free CSS templates</a> in the world. Please tell your friends about it. Thank you. Cloud bread kogi bitters pitchfork shoreditch tumblr yr succulents single-origin coffee schlitz enamel pin you probably haven't heard of them ugh hella.
             
             <br><br>When you look for free CSS templates, you can simply type TemplateMo in any search engine website. In addition, you can type TemplateMo Digital Marketing, TemplateMo Corporate Layouts, etc. Master cleanse +1 intelligentsia swag post-ironic, slow-carb chambray knausgaard PBR&B DSA poutine neutra cardigan hoodie pop-up.</p>
+            
           </div> 
+
+          
+          
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -180,6 +185,62 @@ https://templatemo.com/tm-591-villa-agency
               </li>
             </ul>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="order-form-container">
+          <h1>Order Now</h1>
+          <form id="order-form" action="/order-mail/<%=product_name%>/<%=price%>" method="post">
+            <!-- Personal Information -->
+            <div class="form-group">
+              <label for="name">Full Name</label>
+              <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+            </div>
+      
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" id="email" name="email" placeholder="Enter your email address" required>
+            </div>
+      
+            <div class="form-group">
+              <label for="phone">Phone Number</label>
+              <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+            </div>
+      
+            <!-- Shipping Address -->
+            <h2>Shipping Address</h2>
+            <div class="form-group">
+              <label for="address">Street Address</label>
+              <input type="text" id="address" name="address" placeholder="Enter your street address" required>
+            </div>
+      
+            <div class="form-group">
+              <label for="city">City</label>
+              <input type="text" id="city" name="city" placeholder="Enter your city" required>
+            </div>
+      
+            <div class="form-group">
+              <label for="state">State/Province</label>
+              <input type="text" id="state" name="state" placeholder="Enter your state or province" required>
+            </div>
+      
+            <div class="form-group">
+              <label for="zip">Postal Code</label>
+              <input type="text" id="zip" name="zip" placeholder="Enter your postal code" required>
+            </div>
+      
+            
+      
+            <div class="form-group">
+              <label for="quantity">Quantity</label>
+              <input type="number" id="quantity" name="quantity" min="1" value="1" required>
+            </div>
+      
+            <!-- Submit -->
+            <button type="submit" class="submit-button">Place Order</button>
+          </form>
         </div>
       </div>
     </div>
