--- a/admin/styles.css
+++ b/admin/styles.css
@@ -167,6 +167,10 @@ form {
     border-color: #0066cc;
     box-shadow: 0 0 5px rgba(0, 102, 204, 0.5);
   }
+
+  .hide{
+    visibility: hidden;
+  }
   
   @media (max-width: 768px) {
     form {
