--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -83,6 +83,10 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.hide{
+  display: none;
+}
+
 a {
   text-decoration: none !important;
 }
@@ -107,6 +111,25 @@ p {
 img {
   width: 100%;
   overflow: hidden;
+}
+
+.filter_buttons{
+  width: 100%;
+  text-align: center;
+  
+}
+
+
+.filter_buttons button {
+  background: none;
+  border: none;
+  margin: 20px;
+}
+
+.filter_buttons .active {
+  
+  opacity: 0.2;
+  transition: 0.5s;
 }
 
 /* 
@@ -387,7 +410,7 @@ Header Style
 
 .header-area {
   position: relative;
-  background-color: #132a13;
+  background-color: white;
   height: 100px;
   z-index: 100;
   -webkit-transition: all .5s ease 0s;
@@ -413,7 +436,7 @@ Header Style
   line-height: 100px;
   font-size: 28px;
   text-transform: uppercase;
-  color: #fff;
+  color: #3E7D31;
   font-weight: 700;
   letter-spacing: 2px;
 }
@@ -454,7 +477,7 @@ Header Style
   height: 40px;
   line-height: 40px;
   text-transform: capitalize;
-  color: #fff;
+  color: #3E7D31;
   -webkit-transition: all 0.4s ease 0s;
   -moz-transition: all 0.4s ease 0s;
   -o-transition: all 0.4s ease 0s;
@@ -498,7 +521,7 @@ Header Style
 }
 
 .header-area .main-nav .nav li a.active {
-  color: #f35525;
+  color: black;
 }
 
 
